--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stephenroberts",
   "version": "1.0.0",
-  "description": "Stephen Roberts resume website",
+  "description": "Stephen Roberts' resume website",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
