--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-*sublime-project
-*sublime-workspace
-/config.json
-/build
-/dist
-/node_modules
-/public
+*.log
+.DS_Store
+.deploy*/
+Thumbs.db
+db.json
+node_modules/
+public/
+tmp/
