--- a/themes/stephenroberts/_config.yml
+++ b/themes/stephenroberts/_config.yml
@@ -66,7 +66,7 @@ experience:
   - title: DevOps Engineer
     company: DaVita
     date: January 2019 - Present
-    summary: Part of a transforational engineering team focused on helping the organization adopt engineering practices through modern tools, principles, and techniques
+    summary: Part of a transformational engineering team focused on helping the organization adopt engineering practices through modern tools, principles, and techniques
     details:
       - Coached and mentored teammates to help the organization transition to the Google Cloud Platform
       - Consulted with other teams to aid in software and system design in the cloud
