--- a/package.json
+++ b/package.json
@@ -7,30 +7,33 @@
   "private": true,
   "main": "public/index.html",
   "hexo": {
-    "version": "3.3.9"
+    "version": "7.0.0-rc2"
   },
   "dependencies": {
     "fg-loadcss": "^1.3.1",
-    "hexo": "^3.2.0",
-    "hexo-all-minifier": "^0.3.1",
-    "hexo-autoprefixer": "^1.0.0",
-    "hexo-deployer-s3": "^0.2.2",
-    "hexo-filter-inline-assets": "^1.1.0",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
-  },
-  "devDependencies": {
-    "hexo-cli": "^1.0.3"
+    "hexo": "^7.0.0-rc2",
+    "hexo-all-minifier": "^0.5.7",
+    "hexo-autoprefixer": "^2.0.0",
+    "hexo-deployer-s3": "^0.2.4",
+    "hexo-filter-inline-assets": "^1.2.1",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.1.1",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0"
   },
   "scripts": {
     "start": "hexo server",
     "build": "hexo clean && hexo generate",
     "deploy": "hexo deploy"
+  },
+  "devDependencies": {
+    "hexo-cli": "^4.3.1"
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
