--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,10 @@ root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
+# marked:
+#   gfm: true
+#   breaks: true
+
 # Directory
 source_dir: source
 public_dir: public
